<resources>
    <string name="app_name">SpaceX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_company_info">Company info</string>
    <string name="menu_launches">Launches</string>

    <!-- Company Info -->
    <string name="founded">Founded by %1$s\nin %2$d</string>
    <string name="resources">Resources</string>
    <string name="employees">Employees</string>
    <string name="vehicles">Vehicles</string>
    <string name="launch_sites">Launch sites</string>
    <string name="test_sites">Test sites</string>
    <string name="valuation">Valuation</string>
    <string name="organisation">Organisation</string>
    <string name="ceo">CEO</string>
    <string name="cto">CTO</string>
    <string name="coo">COO</string>
    <string name="cto_propulsion">CTO Propulsion</string>

    <!-- Launches -->
    <string name="flight_no">Flight #%1$d</string>
    <string name="launch_details">Details of flight #%1$d</string>
    <string name="rocket">Rocket</string>
    <string name="rocket_name">Name</string>
    <string name="rocket_type">Type</string>
    <string name="rocket_description">Description</string>
    <string name="read_more">Read more</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="filters">Filters</string>
    <string name="launch_date">Launch date</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="future_launch">This flight has not yet happen</string>
    <string name="no_data">No data</string>
    <string name="launch_when">When: %1$s</string>
</resources>