<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filterDialog.FilterDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/Spacex.Details.Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        app:layout_constraintBottom_toBottomOf="@+id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/filter_launch_title"
                style="@style/Spacex.Details.Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launch_date"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/launch_from"
                style="@style/Spacex.Details.Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                app:layout_constraintTop_toBottomOf="@+id/filter_launch_title" />

            <DatePicker
                android:id="@+id/date_picker_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@+id/launch_from" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/launch_to"
                style="@style/Spacex.Details.Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                app:layout_constraintTop_toBottomOf="@+id/date_picker_from" />

            <DatePicker
                android:id="@+id/date_picker_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@+id/launch_to" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Spacex.Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_button"
        app:layout_constraintEnd_toStartOf="@+id/confirm_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirm_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        style="@style/Spacex.Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>