<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.companyInfo.CompanyInfoFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="?attr/bcg_picture" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/company_name"
                style="@style/Spacex.CompanyInfo.Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="SpaceX" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/founder"
                style="@style/Spacex.CompanyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_name"
                tools:text="Founded by Elon Musk\nin 2002" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/summary"
                style="@style/Spacex.CompanyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/founder"
                tools:text="SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets." />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/resources"
                style="@style/Spacex.CompanyInfo.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resources"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary" />

            <GridLayout
                android:id="@+id/resources_layout"
                style="@style/Spacex.CompanyInfo.Grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resources">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/employees"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/employees"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/employees_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="8000" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vehicles"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicles"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vehicles_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="3" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/launch_sites"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_sites"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/launch_sites_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="3" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/test_sites"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/test_sites"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/test_sites_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="1" />

            </GridLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/valuation"
                style="@style/Spacex.CompanyInfo.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valuation"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resources_layout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/valuation_data"
                style="@style/Spacex.CompanyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valuation"
                tools:text="52000000000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/organisation"
                style="@style/Spacex.CompanyInfo.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organisation"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valuation_data" />

            <GridLayout
                android:id="@+id/organisation_layout"
                style="@style/Spacex.CompanyInfo.Grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/organisation">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ceo"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/ceo"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/ceo_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="Elon Musk" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cto"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/cto"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cto_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="Elon Musk" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/coo"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/coo"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cos_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="Gwynne Shotwell" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cto_propulsion"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:text="@string/cto_propulsion"
                    android:textAlignment="textStart" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cto_propulsion_data"
                    style="@style/Spacex.CompanyInfo.Details"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    tools:text="Tom Mueller" />
            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>